tests/parser_samples/invalid/microinstruction_with_label/5.mas
%i a {
    a, b, : b;
}